# contract-tester

./: .gitignore  CHANGELOG.md  DEMO_SCRIPT_90S.md  EMAIL_TEMPLATES.md  GTM.md  LAUNCH_PAGE_COPY.md  LICENSE  LICENSE_TERMS.md  PRICING.md  README.md  REFUND_POLICY.md  SUPPORT.md  pyinstaller.spec  pyproject.toml  pyrightconfig.json  requirements.txt  run_cli.py  version.txt  wrangler.jsonc
.github/workflows/: ci.yml
keys/: license_public.pem
scripts/: __init__.py  build.ps1  check_factory_readiness.py  generate_license.py  generate_license_keys.py  release.ps1  revoke_and_note.py  revoke_license.py  write_checksums.py
site/: index.html  styles.css
src/contract_tester/: cli.py  diff.py  license.py  openapi.py  output.py  report.py  traffic.py  validate.py
tests/: __init__.py  test_cli.py  test_diff.py  test_factory_readiness.py  test_generate_license_keys_script.py  test_license.py  test_license_status.py  test_max_errors.py  test_path_matching.py  test_report.py  test_revoke_and_note_script.py  test_revoke_script.py  test_traffic_curl.py  test_traffic_har.py  test_validate_e2e.py  test_write_checksums.py
tests/fixtures/: sample_spec.json  sample_traffic.json
